project page and phone iot

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Assignment 3</title>
+    <title>NetsBlox</title>
     <style>
       body {
         color: #606c76;
